--- a/first-node-app/package.json
+++ b/first-node-app/package.json
@@ -10,6 +10,7 @@
   "author": "Quentin Liger <qliger.dev@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "http-errors": "^1.7.2",
