--- a/first-node-app/package.json
+++ b/first-node-app/package.json
@@ -2,21 +2,44 @@
   "name": "first-node-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "npm run dev",
+    "build": "tsc",
+    "lint": "eslint . ",
+    "lint-fix": "eslint --fix . ",
+    "dev": "ts-node-dev --transpile-only --respawn  ./src/server.ts",
+    "prod": "tsc && node ./built/server.js",
+    "debug": "tsc && node --inspect ./built/server.js"
   },
   "author": "Quentin Liger <qliger.dev@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "http-errors": "^1.7.2",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-prettier": "^3.4.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
   }
 }
